# aidoku-new-zh-sources

./: LICENSE-MIT  README.md  index.html  index.json  index.min.json
sources/: zh.komiic-v7.aix  zh.komiic-v9.aix  zh.webtoons-v11.aix  zh.webtoons-v12.aix  zh.webtoons-v14.aix  zh.webtoons-v15.aix
sources/multi.koobone/: Cargo.toml
sources/multi.koobone/res/: source.json
sources/multi.koobone/src/: lib.rs
sources/zh.komiic/: Cargo.toml
sources/zh.komiic/res/: filters.json  settings.json  source.json
sources/zh.komiic/src/: helper.rs  lib.rs
sources/zh.noymanga/: Cargo.toml
sources/zh.noymanga/res/: source.json
sources/zh.noymanga/src/: lib.rs
sources/zh.webtoons/: Cargo.toml
sources/zh.webtoons/res/: filters.json  source.json
sources/zh.webtoons/src/: helper.rs  lib.rs
